# automeasure

./: .gitmodules  CMakeLists.txt  README.md  automeasure.service  ca410-read.py  display_info.sh  filter-greyramp-data.sh  filter-wrgb-data.sh  generate-grey-ramp.sh  measure-color.sh  measure.sh  patternplayer.service  setup.sh  square-box-pattern-all.sh  square-box-pattern.sh
binaries/: ka3005p
